--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="img/logo.webp" alt="logo">
                     </div>
                     <div class="col-6 align-self-center text-right">
-                        <a href="https://kuradigital.obotechsolutions.com/portal" class="text-white lead">Access Demo</a>
+                        <a href="https://kuradigital.obotechsolutions.com/portal" target="_blank" class="text-white lead">Access Demo</a>
                     </div>
                 </div>
             </header>
@@ -39,7 +39,7 @@
                 Get real time visibility of your total garnered votes from the polling station level.
                 <br> Your ground agents will simply upload the final tally form and the system will calculate your total votes.
             </p>
-            <a href="https://kuradigital.obotechsolutions.com/portal" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
+            <a href="https://kuradigital.obotechsolutions.com/portal" target="_blank" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
         </div>
     </div>
     <!-- three-blcok -->
@@ -51,7 +51,7 @@
                     <h2 class="font-weight-bold">Voting Results Backup</h2>
                     <p class="my-4">Keep a safe record of all your polling station official votes tally.
                         <br>Your ground agents will simply upload the official IEBC forms & votes count for your visibility and record keeping.</p>
-                    <a href="https://kuradigital.obotechsolutions.com/portal" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
+                    <a href="https://kuradigital.obotechsolutions.com/portal" target="_blank" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
                     <img src="img/feature-1.png" alt="Take a look inside" class="mx-auto d-block">
@@ -69,7 +69,7 @@
                         Get real-time updates on your performance as a political candidate every time your agent updates results.
                         <br> Our system offers rich analytics per polling station and per overall performance to enable you reconcile better and faster.
                     </p>
-                    <a href="https://kuradigital.obotechsolutions.com/portal" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
+                    <a href="https://kuradigital.obotechsolutions.com/portal" target="_blank" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center flex-md-first">
                     <img src="img/feature-2.png" alt="Safe and reliable" class="mx-auto d-block">
@@ -99,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <form action=”https://kuradigital.obotechsolutions.com/portal” method="post">
+                    <form action=”https://kuradigital.obotechsolutions.com/portal” target="_blank" method="post">
                     	<div class="row">
 	                        <div class="form-group col-md-6">
 	                            <label for="name">Your Name</label>
@@ -126,10 +126,10 @@
         <div class="container">
             <div class="row justify-content-between">
             	<div class="col-md-6 text-white align-self-center text-center text-md-left my-2">
-                    Copyright © 2022 | Powered by <a href="https://www.obotechsolutions.co.ke">OboTech Solutions Ltd</a>
+                    Copyright © 2022 | Powered by <a href="https://www.obotechsolutions.co.ke" target="_blank">OboTech Solutions Ltd</a>
                 </div>
                 <div class="col-md-6 align-self-center text-center text-md-right my-2" id="social-media">
-                    <a href="https://www.facebook.com/obotechsolutions" class="d-inline-block text-center ml-2">
+                    <a href="https://www.facebook.com/obotechsolutions" target="_blank"  class="d-inline-block text-center ml-2">
                     	<i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                     <a href="#" class="d-inline-block text-center ml-2">
